--- a/Thuong-QuanLyNhanSu/Thuong-QuanLyNhanSu/GUI/frmNhanVien.resx
+++ b/Thuong-QuanLyNhanSu/Thuong-QuanLyNhanSu/GUI/frmNhanVien.resx
@@ -117,33 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="MaNV.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="TenNV.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="GioiTinh.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="NgaySinh.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="DiaChi.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Luong.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="MaNGS.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="MaPB.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="TaiKhoan.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnThem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -176,75 +149,35 @@
         mOLyP4ZtVv+HZyx/AAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="btnRefersh.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnLuu.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAACWxJREFUWEe1
-        VwlQVFcW/aBGcVDcUDHqGMVUrFiJZjGJDjjoSKjgilErwCgD6hi3iRptkCCIcc1oNEajljOmDCDQgqBE
-        CbiU2soYNBqbRKTpld6b3jdoljP3fcTAZAacmppX//Tj/c9/59z3773vPg7AU0RERCxJSEgQxMfHb/xf
-        ERcXxyM2liF247JlywSTJk2K7sjH0Glw4cKFW9T/39revXuF1HXi7DQgASLq/2NrbW3tEi0tLWhuboav
-        qQmNjT40NDTC6/XC7fbw72dm7silrhNnp0G7AJrrV5N3RAsDkXXEU2JfB2KPBy6XG06ni02L7dszuxZw
-        /vz5JwL+hbDlF0LQ9Ss00eVrRkNjI5E3wPPEaqfLBYfTCbvdQfMAGRnbn01AR8va0cqIaBJfqw/aVjV+
-        an2IBy2VEPvuQ9WogLfRCzTSc2/TU6sdDgdsdjtsNhuaaY709IyuBRQXF/9bAYzY0WxHSUMBMt2bsc69
-        DKs8H2CFezESbQuRpF0EgWIdCnV50Lv0aPK08AKcDhcsVivMFit8viZs25b+bALY92RoaWZmA1etZVgq
-        W4CIR5N5zFWGI9YYjWWWeYg3zsEcyXS8enMMnhcGIrpkOsqVpbCQ1RqjBlarDfX1Zt4p07Zt++8EsHZa
-        eRJjywZh9Lf9MbZoCCJuv46k2iXYqv0LMvUCbNGsxh9r5mGG6A288GUwei7hMPGj8YjZPhuJmUthtzpg
-        MtXDS46ZlpbWtYCiJwKayJtZuyQ7j4DPOfTb44/nM4MQljcZX8j2QWx9AJPTCIvTCp1dhwqDCALxekz9
-        5hVM3fAGhswNBDedQ8DM3ii8dg5Wi40iwotPPvmkGwFFRbyAVvJ6u8uOl9aGoudsDuMWjUL47ikoURXx
-        Hs+crcHhg9PqhsfWiFY3OZ+zGSelRxAhnILY4gV44WAwuPUc9lzcCbe1gSLCjdTUbgScO9cmgLWj+UfA
-        jeUQGjEGU9ZPRpbkFO+MLpsHVx6U4sSdz3Gi6gAO39yD63evwGNuQLbia2x4tBKZkmSkV29G6NmheC1n
-        AjRaLUWGB1tTU7sTcO6pgN8nhCFgUi+8E/sm1hQt58mdZjeO3NiHBMVsfOxbgU+bBchznUKSeAFOXzmJ
-        Kk0Vyhwl2FOdgY3X12DT96sxoiAQfy3fi0ZXC1K2PqMArVGHoDf7Y8K74xG+7m2cfUzv0dIX3c7HVFEo
-        3pW+Q2G3FjfNV3HXfgcR0tcwvfRl3Ki4DqfJC51Bj4f1P+KCpRCpoo9xpOIQvPTJklO2di2g8ImAB9UP
-        EBw2AOGJUzH/s2jc192Hz96M5cKFCDjG4RXhWByrPAy3w40D4t0YlzsUfY9zSMldj3odOaZWD6OmnmCG
-        TmeEQlVHucCG5OSUbgQUFvICTGYTrt+7hiviclytvgwjjW12K2YfnAouhvwifQTyKrLha/Bhc8l6vPnZ
-        RHDxHJYeXQCD3gS1WofHCglqlLWQKRRQKFSoN1sgSE7uWkBBQQEvwOtp4Je8hTaxBpcPdpuDTygLD8zA
-        7LWROFl8AqWVl5Aq3Iybj26Ae48DF8Zh3fEkWPR23JHcwZrTK5GwKx6RH87AxZsX4bC7IBB0I+Ds2TYB
-        /5BXIOeHb1D2qBSVP93lnc9tbsRXl/dj+MbeGLVhCEamB6NPMoerj8rw4sYxCFzFIf9GDuwGF/LFeZgp
-        CMfr8yaDC+VQfOU8CXBji0DQtQChUMgLyBGfxpS8l/GH/RGIPbUY+69/his/X4aiToWkwgXovYtD/7/1
-        wG9LgvB60XhM/Go4NgpXQilX8yuQUrYJ4UlvY9i0wQiZORQPq6soHVuwZUs3AvLzhaKWplbUGdUYmzsc
-        Mbcikf5DMhadmYeoYzORcl4ApbIO+ysykFAZjT9LYhB/KwpfUC6QSZUwqa24rbyNGbun4dVo8otxHJZn
-        JsGgM0FvMHW/Ann5+SK2pzc6mrDiXAK43Ryivv0dNny/CvPLZ6FIXgCPwUfebYFULsMj6c+QyeTQq0ww
-        1VlwX3kfS4WLMfH9lzAgLBC9Z/RCWUU5iVbzTri1uzyQm5cn8ngb+GxXfKsI3HwO/rEUdskvIvJAOBZ+
-        F4XC2nyo6tQw1plhUlmgV5ogkytQIi1GXOkCTEgZg+B1fcF9xGGtcBV0KiPkFAUsFXe7G+bm5olYJWOk
-        3atOrcGEmBcxan4IBr73GwyKDsSkw+Mx69Zb2FSzCl8q9uOU8gSOKQ4hTboJMZWzEJo9DMP+HoCgXA5z
-        y2dCQqukVmmh1empXGumkqybiuhMbq6IFRLsBaOhHhduXsAlCrePL67D83uD0P+4H966MQGLpVFINL6P
-        FeYl+JMxBjGymZh2dyImV4zFGz+EYu3DRFTLa6BTG6DTG2Cm5Wet26I0J+eMyG53Qq3R8ivARJj0Fhpr
-        UCDJw/J7cYj88W3MUYRhieldxNlmI84ejQ8sUYg1ReMj/XJk0YakVKiJ3AiDgbZsyh92h5OmB9uMzrRz
-        taPTIDsnR2S12XnyOvrOKkqhSqUKKvJ85mi1Sjkuq8rwtf44Dlv34ZBrD4669uMb20mUa0tRLa2BVm6A
-        RqODwWSClaoiO9WFDKx9uHr14XaudnQaZGfniCyUs5mTKYlcQeRyhZLSqRJSmYIPNVWtBkqJBjKJErUS
-        OaQ1dL9aBUUNE1tHW68Opvp6KkTtbeRUETOwynru3LmbO/IxdBpkZWeLWLgoaKKn5OThUqkCtVI5JLUy
-        1NRKUSNhqMXjGsJjCWrpPiPX6Qx8wrFR6maktidg1ZDZYsHIkSMjOvIxdBpkZWWLTCYzHzYyeZvVPLG0
-        nbi2DTUSnpgnp+dsxfT0vVn1y5fhzGqy3kshzRo7rNCZoIjjuB7tXO3gf/z9/f3ood/ZgoLbHioejSTC
-        YKzns5dOb+Qt0zLQNqvhoePHRqp2bUTEcger+9nhgy7+b3Y2EIurnAcPHvouLCwsqUePHoN79erlT30n
-        Eaz5DR48OIQwJTExMevTnTsrt6Vn3CFUUh1/j/AgbVv6jwQxJRJxWlob0jMyqnbs2FG1a9cuMR06xfv2
-        7eNBsX5/zZo11yIjI7NGjx6d2rdv38VBQUFRISEhs0aMGDEtODh4DBn8VAT/89xzz/Xu16/fgJ49e/Yn
-        QawfRGqHEIaS4OH0wgjqR3aG/yi6zzCSwc/Prx3sf4cGBAQMGTBgwLCBAweG0NzDAwMDgwkD+/TpE8CM
-        bhMA7p8JRsEkNMH+FwAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="btnTimKiem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAABItJREFUSEut
-        k1tQlGUYx7cSIa+6qpuY4qIJLlTkIGTZeJE6lF2gNHFIwEGYBp2QRAqEOBqDYsKKjrgCCwktyFlAIZE4
-        yEndhQ2B5bDALruwsAvs6WMP6L+H7eumQbTkN/PON/O97/f/vc/zvh/n3/ySJdjOzRKUX80pwzVuBbhX
-        GlGQVw3+jbrposL6WHbZ/yM9kdefnlGOzMI+nK+TgtskR06DDBlVE0gqHEBydgsKedUovFEXwH7y8pyN
-        zpVnXm9F6cMF1D9Ro3ZgHhUP51DWq8TNLiUK22ZwuVGGhPwBZGXXIO9qjT/76YuJjszqP89rRbNUj/vj
-        Syh/NIfr96ZRLZxDy+gimiUa3B1ZRJVoDgUkiiuS4NIFAXIv3XJjI57Pt+GZX8XEXkOHgkGHTIeGQTXq
-        xCqqYgGPVEYK1mBo2QTxkgndMwaam0f+fTmic3pJUsqwMc8nxD9JUHxXjD91ZnQr9OhW6vGARMI5Bm1T
-        y+iVaaE2r0LBWDC8bEb7lA4lPQpcrJ9CYnIJMs7xndio9fH78gwGKfzJkhmDi38/+zUrGNOb8VhpQBfJ
-        1tCtPsOEwYy+WQO1UAleqwKn0xuRksBLY6PW59CBKMxQwChJxmmM0ZBozZCSYEJvQeeMHmIKVTFWSI1W
-        /D6qQRWdTUG7AvEX7iA+hlvKRq3P/n2RUJNAbrRAQQEKesoMFhKZoLU8xSj1vm1ahyrxAoo65GgZW0S1
-        SAV+pxJJuS34/mT2xoK9e8JhIMEC9VlDY9G0CtWK1SYcpUoUzComqZKRJQZCNWO7WYLeWZT2qBCVVoeT
-        EZkpbNT6fOId3v9ANA6GJAz1mbE+wxLtfI4k01TJiNYEkcaA1kmtLZxP17SG/pGibhXCjmcjPPTcF2zU
-        +uz9+PjhiIiLFA88o2GlYSDJvMkKGVWxdh7ixRV0UJtq6PreHpxHw5AGqXwhAnzjDGzMxrju+EZefbvb
-        JrGQRU8VrLVp7Sz+EbTR9WwaUeMP6TKKafeHfc/C93Dm52zExnh5hW1zcT6C5naxTaJdBWZtvTdjmA5Z
-        pDGid9aIPpUJlUI1fA7F48SJq7iV5Dc/mcpJZWM2xt396HvOzn6ywKPp6JPIsUQiJVUzST0bWQH96Uac
-        /rkKH3mFI+GnEnSWpGAshQPZTU/0/8ARsDEvZsfOwCCXD49MubkehX9oBvyDM7Dvsyjs2h6A3W7B/MR4
-        Pq/24imIznBgkhbjqaIW0nx3dH33+m9sxMvj6hro7bYraLeHR/AH7CsbnaEcGIe5WFXUwTpVAcvQZUiy
-        XXAvwu6/S9ajMeQNxzuhdtD1xsMiyYOZBCvdUehPfx/1x+w3R1IRaOdYGWSH5aZgrPTEgOmKBNN0EI8T
-        3oHga4fNkRT7bnUs9rPHwq97YGw8CGPTp9BXOmE03R48323N7LJXI8/HwTHv0JuY5TpCJ3gX+go76Ms4
-        GEvegis+9sPsslcn54C9bCSeziWfLkApB8I4DtL2v6VlpzeHRG8HmfjUa2gI2YIsXye4eYap2KnN40eP
-        rZJYj61T7p7H2rfvDH77L8KefZKaHLp7AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAAK/INwWK6QAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAXCSURBVFhHvZdbUFNXGIVB0ZdW8dJiLzN9rMOjL33o
+        izN0OtZ2aqtUTCSoQxUFlItCCErRUrB1FLD1AoIBQgREwVDqjamxgiIK1HsQL2hRBAJBQlAQIVn9/x1C
+        MEAAb3tm5Zycs2evb/97nZMdFwBCq1U3EJStw9oDNQgZkA7r1DewLvs61qquYm3WFQRnXEaw8hKC9lcj
+        MK0KgfsqsSblIlbvrUDAnnIE7D6HVX+UYeXvZ/Bj8mn4J2rhv+NvrNhWAlnCcUh+LoZPbBFZWn3Fh7HL
+        MiFYrYPZAvSZgd43IB6Xx7eQlsRqhgC4hefdFB01dSYU3ulAfm0HcnVGqK61Q3npMVIr27DrvAFJpa3Y
+        ptUjvqQZW443Iaa4EYqiRsgLHyFyDGII6eYitD2xuA4GmCQ/dAvP+948AE/Sd4sGBgeAyQoC6Ol9CwA0
+        SdlmDVo7HQEOvx0ArrJvbCFaTEMqUPvWAJbGFKC5wxEg/6YAePLMgo5uC+jaK6md9dSCxyQKnPjeSWML
+        gE2H0eQIEHWw5rUBOJqz+JwBeghAujEfjcYhALrXAuBoTmmHodN6bqJxGUCiOIiGdgcAed6NVwYYzpzS
+        jlaT9cjjsockKhcPHzsC5L4awEjmlHboO+jIANTnGXkskeeivs0RIOf6SwM4M6e0C/E59xMAkTn4jwCm
+        7JloB4jMufZSAKOZU9rRZLSecz8G8IlQ477B7ABw4Oq4AYYz58DZAET5STYA7tdNHos3ZKOu1QEgQn1l
+        XAAjmY/Wup8TwHoV7raYXb8ueccOsCH78pgBRio7i1uwNhBT90yE+16r+DyIrnFjgB/Cs3Bbb3ZdoH13
+        EEDWpTEBOFtzFjc21JqKoNFnQtOSKc75GjcG8A7LwK1ms+ui0il2gPWZ/44KMFrgbAA864KmNCTqIpB8
+        MwKF+nRMo2vcOAOLQpWoJYDF5VMHAWRUOwUYS+BsS8BmqvodiK6UYlO1FOqGRExPcRP3nlEFVsbk8sbk
+        A/rqPgAQnlE1IsB4AzedANLqfsH6im8RUbkAyvp4zEy1Athan6X3KzrMsQMoK4cFGE/geOZs7kFm23Uh
+        WHN2LoLPz8XOO6H4SDkJ7+1zwwzSdLrP/b0KPj9jB0i/MARgPIEraE6nsici/V68MA89Pw+SU7MhOzMb
+        UVfmY/f9MKibt+KwIRlHjUqUdv0pIAYAwtIqXgAYT+A0+gwRuOiLEoRT2XnmklOf4ruS9+F92gP+Fzwh
+        v+6FuNsLseO+HzKbo3CyMwszqBJ2gH12ACMDODHn1yu/4QYDJNVEYGOVFBsuLEBQ+VzI/pkNb60HfMpm
+        IaDaE9E1XkioW4TkB35QtShQ0ql6ESA0tVwA8KaBy+/MnDYTQtxsS8CPmrohSQQu+XYo5Jfnw7/CEwFV
+        noit/QapDeHIM/yKI+07caIzA2e7izEtZdAShKScGwDg8jszp80EHpG4BZ6yhlAEkAbktH+4fxJ23QtD
+        5DUvKHRewvwT1WR4pFMQ09wwk4LoTn2/KBwUwpC9ZQLARAA8e2fmtJnAgzYrwHCN057dlIC4WwsRf3ch
+        clu3krkbesxdcX2W54Fm9Hmb0TuPulofQ5rx5OBdpdYK9AdQVKAfgNebIRiAZy4ASA/bzHS0qp7OG9vp
+        Xwc1Xtv81iRsvydDYr0flT1ZzJzN6fZnpI9Js0jWFxEFzi0gSSt2rE97rHs33r1wEG1h5IoIoH7ZoGyV
+        YTBbMPk5/8u4H8qmKGTqFThuUornn2dOt9ncJdYwzWWzsf+3gAwmLPvtpPjfxhBcCd448HubfzxYXawe
+        BrRCPmHRcnFmbOJr3PjJ4Of8hEkl0l5GgeM1N1tE2XnmwnwAgCWNOwbf+KNYnnAMKxKOYkV8MZbHFcNv
+        SxFksUcg+6kAvjGHsJS21NLoPNpY5kAiz8ES2t340AbDh35ilylyaCjgy/TvBQRXgpfDFji6NYfkTuoH
+        mOLyP4ZtVv+HZyx/AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="btnXoa.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -350,35 +283,75 @@
         5KJb5gvzD8z6H4KZr8OqmBjRAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="btnLuu.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnTimKiem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAAK/INwWK6QAAABl0RVh0U29m
-        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAXCSURBVFhHvZdbUFNXGIVB0ZdW8dJiLzN9rMOjL33o
-        izN0OtZ2aqtUTCSoQxUFlItCCErRUrB1FLD1AoIBQgREwVDqjamxgiIK1HsQL2hRBAJBQlAQIVn9/x1C
-        MEAAb3tm5Zycs2evb/97nZMdFwBCq1U3EJStw9oDNQgZkA7r1DewLvs61qquYm3WFQRnXEaw8hKC9lcj
-        MK0KgfsqsSblIlbvrUDAnnIE7D6HVX+UYeXvZ/Bj8mn4J2rhv+NvrNhWAlnCcUh+LoZPbBFZWn3Fh7HL
-        MiFYrYPZAvSZgd43IB6Xx7eQlsRqhgC4hefdFB01dSYU3ulAfm0HcnVGqK61Q3npMVIr27DrvAFJpa3Y
-        ptUjvqQZW443Iaa4EYqiRsgLHyFyDGII6eYitD2xuA4GmCQ/dAvP+948AE/Sd4sGBgeAyQoC6Ol9CwA0
-        SdlmDVo7HQEOvx0ArrJvbCFaTEMqUPvWAJbGFKC5wxEg/6YAePLMgo5uC+jaK6md9dSCxyQKnPjeSWML
-        gE2H0eQIEHWw5rUBOJqz+JwBeghAujEfjcYhALrXAuBoTmmHodN6bqJxGUCiOIiGdgcAed6NVwYYzpzS
-        jlaT9cjjsockKhcPHzsC5L4awEjmlHboO+jIANTnGXkskeeivs0RIOf6SwM4M6e0C/E59xMAkTn4jwCm
-        7JloB4jMufZSAKOZU9rRZLSecz8G8IlQ477B7ABw4Oq4AYYz58DZAET5STYA7tdNHos3ZKOu1QEgQn1l
-        XAAjmY/Wup8TwHoV7raYXb8ueccOsCH78pgBRio7i1uwNhBT90yE+16r+DyIrnFjgB/Cs3Bbb3ZdoH13
-        EEDWpTEBOFtzFjc21JqKoNFnQtOSKc75GjcG8A7LwK1ms+ui0il2gPWZ/44KMFrgbAA864KmNCTqIpB8
-        MwKF+nRMo2vcOAOLQpWoJYDF5VMHAWRUOwUYS+BsS8BmqvodiK6UYlO1FOqGRExPcRP3nlEFVsbk8sbk
-        A/rqPgAQnlE1IsB4AzedANLqfsH6im8RUbkAyvp4zEy1Athan6X3KzrMsQMoK4cFGE/geOZs7kFm23Uh
-        WHN2LoLPz8XOO6H4SDkJ7+1zwwzSdLrP/b0KPj9jB0i/MARgPIEraE6nsici/V68MA89Pw+SU7MhOzMb
-        UVfmY/f9MKibt+KwIRlHjUqUdv0pIAYAwtIqXgAYT+A0+gwRuOiLEoRT2XnmklOf4ruS9+F92gP+Fzwh
-        v+6FuNsLseO+HzKbo3CyMwszqBJ2gH12ACMDODHn1yu/4QYDJNVEYGOVFBsuLEBQ+VzI/pkNb60HfMpm
-        IaDaE9E1XkioW4TkB35QtShQ0ql6ESA0tVwA8KaBy+/MnDYTQtxsS8CPmrohSQQu+XYo5Jfnw7/CEwFV
-        noit/QapDeHIM/yKI+07caIzA2e7izEtZdAShKScGwDg8jszp80EHpG4BZ6yhlAEkAbktH+4fxJ23QtD
-        5DUvKHRewvwT1WR4pFMQ09wwk4LoTn2/KBwUwpC9ZQLARAA8e2fmtJnAgzYrwHCN057dlIC4WwsRf3ch
-        clu3krkbesxdcX2W54Fm9Hmb0TuPulofQ5rx5OBdpdYK9AdQVKAfgNebIRiAZy4ASA/bzHS0qp7OG9vp
-        Xwc1Xtv81iRsvydDYr0flT1ZzJzN6fZnpI9Js0jWFxEFzi0gSSt2rE97rHs33r1wEG1h5IoIoH7ZoGyV
-        YTBbMPk5/8u4H8qmKGTqFThuUornn2dOt9ncJdYwzWWzsf+3gAwmLPvtpPjfxhBcCd448HubfzxYXawe
-        BrRCPmHRcnFmbOJr3PjJ4Of8hEkl0l5GgeM1N1tE2XnmwnwAgCWNOwbf+KNYnnAMKxKOYkV8MZbHFcNv
-        SxFksUcg+6kAvjGHsJS21NLoPNpY5kAiz8ES2t340AbDh35ilylyaCjgy/TvBQRXgpfDFji6NYfkTuoH
-        mOLyP4ZtVv+HZyx/AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAABItJREFUSEut
+        k1tQlGUYx7cSIa+6qpuY4qIJLlTkIGTZeJE6lF2gNHFIwEGYBp2QRAqEOBqDYsKKjrgCCwktyFlAIZE4
+        yEndhQ2B5bDALruwsAvs6WMP6L+H7eumQbTkN/PON/O97/f/vc/zvh/n3/ySJdjOzRKUX80pwzVuBbhX
+        GlGQVw3+jbrposL6WHbZ/yM9kdefnlGOzMI+nK+TgtskR06DDBlVE0gqHEBydgsKedUovFEXwH7y8pyN
+        zpVnXm9F6cMF1D9Ro3ZgHhUP51DWq8TNLiUK22ZwuVGGhPwBZGXXIO9qjT/76YuJjszqP89rRbNUj/vj
+        Syh/NIfr96ZRLZxDy+gimiUa3B1ZRJVoDgUkiiuS4NIFAXIv3XJjI57Pt+GZX8XEXkOHgkGHTIeGQTXq
+        xCqqYgGPVEYK1mBo2QTxkgndMwaam0f+fTmic3pJUsqwMc8nxD9JUHxXjD91ZnQr9OhW6vGARMI5Bm1T
+        y+iVaaE2r0LBWDC8bEb7lA4lPQpcrJ9CYnIJMs7xndio9fH78gwGKfzJkhmDi38/+zUrGNOb8VhpQBfJ
+        1tCtPsOEwYy+WQO1UAleqwKn0xuRksBLY6PW59CBKMxQwChJxmmM0ZBozZCSYEJvQeeMHmIKVTFWSI1W
+        /D6qQRWdTUG7AvEX7iA+hlvKRq3P/n2RUJNAbrRAQQEKesoMFhKZoLU8xSj1vm1ahyrxAoo65GgZW0S1
+        SAV+pxJJuS34/mT2xoK9e8JhIMEC9VlDY9G0CtWK1SYcpUoUzComqZKRJQZCNWO7WYLeWZT2qBCVVoeT
+        EZkpbNT6fOId3v9ANA6GJAz1mbE+wxLtfI4k01TJiNYEkcaA1kmtLZxP17SG/pGibhXCjmcjPPTcF2zU
+        +uz9+PjhiIiLFA88o2GlYSDJvMkKGVWxdh7ixRV0UJtq6PreHpxHw5AGqXwhAnzjDGzMxrju+EZefbvb
+        JrGQRU8VrLVp7Sz+EbTR9WwaUeMP6TKKafeHfc/C93Dm52zExnh5hW1zcT6C5naxTaJdBWZtvTdjmA5Z
+        pDGid9aIPpUJlUI1fA7F48SJq7iV5Dc/mcpJZWM2xt396HvOzn6ywKPp6JPIsUQiJVUzST0bWQH96Uac
+        /rkKH3mFI+GnEnSWpGAshQPZTU/0/8ARsDEvZsfOwCCXD49MubkehX9oBvyDM7Dvsyjs2h6A3W7B/MR4
+        Pq/24imIznBgkhbjqaIW0nx3dH33+m9sxMvj6hro7bYraLeHR/AH7CsbnaEcGIe5WFXUwTpVAcvQZUiy
+        XXAvwu6/S9ajMeQNxzuhdtD1xsMiyYOZBCvdUehPfx/1x+w3R1IRaOdYGWSH5aZgrPTEgOmKBNN0EI8T
+        3oHga4fNkRT7bnUs9rPHwq97YGw8CGPTp9BXOmE03R48323N7LJXI8/HwTHv0JuY5TpCJ3gX+go76Ms4
+        GEvegis+9sPsslcn54C9bCSeziWfLkApB8I4DtL2v6VlpzeHRG8HmfjUa2gI2YIsXye4eYap2KnN40eP
+        rZJYj61T7p7H2rfvDH77L8KefZKaHLp7AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnLamMoi.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAACWxJREFUWEe1
+        VwlQVFcW/aBGcVDcUDHqGMVUrFiJZjGJDjjoSKjgilErwCgD6hi3iRptkCCIcc1oNEajljOmDCDQgqBE
+        CbiU2soYNBqbRKTpld6b3jdoljP3fcTAZAacmppX//Tj/c9/59z3773vPg7AU0RERCxJSEgQxMfHb/xf
+        ERcXxyM2liF247JlywSTJk2K7sjH0Glw4cKFW9T/39revXuF1HXi7DQgASLq/2NrbW3tEi0tLWhuboav
+        qQmNjT40NDTC6/XC7fbw72dm7silrhNnp0G7AJrrV5N3RAsDkXXEU2JfB2KPBy6XG06ni02L7dszuxZw
+        /vz5JwL+hbDlF0LQ9Ss00eVrRkNjI5E3wPPEaqfLBYfTCbvdQfMAGRnbn01AR8va0cqIaBJfqw/aVjV+
+        an2IBy2VEPvuQ9WogLfRCzTSc2/TU6sdDgdsdjtsNhuaaY709IyuBRQXF/9bAYzY0WxHSUMBMt2bsc69
+        DKs8H2CFezESbQuRpF0EgWIdCnV50Lv0aPK08AKcDhcsVivMFit8viZs25b+bALY92RoaWZmA1etZVgq
+        W4CIR5N5zFWGI9YYjWWWeYg3zsEcyXS8enMMnhcGIrpkOsqVpbCQ1RqjBlarDfX1Zt4p07Zt++8EsHZa
+        eRJjywZh9Lf9MbZoCCJuv46k2iXYqv0LMvUCbNGsxh9r5mGG6A288GUwei7hMPGj8YjZPhuJmUthtzpg
+        MtXDS46ZlpbWtYCiJwKayJtZuyQ7j4DPOfTb44/nM4MQljcZX8j2QWx9AJPTCIvTCp1dhwqDCALxekz9
+        5hVM3fAGhswNBDedQ8DM3ii8dg5Wi40iwotPPvmkGwFFRbyAVvJ6u8uOl9aGoudsDuMWjUL47ikoURXx
+        Hs+crcHhg9PqhsfWiFY3OZ+zGSelRxAhnILY4gV44WAwuPUc9lzcCbe1gSLCjdTUbgScO9cmgLWj+UfA
+        jeUQGjEGU9ZPRpbkFO+MLpsHVx6U4sSdz3Gi6gAO39yD63evwGNuQLbia2x4tBKZkmSkV29G6NmheC1n
+        AjRaLUWGB1tTU7sTcO6pgN8nhCFgUi+8E/sm1hQt58mdZjeO3NiHBMVsfOxbgU+bBchznUKSeAFOXzmJ
+        Kk0Vyhwl2FOdgY3X12DT96sxoiAQfy3fi0ZXC1K2PqMArVGHoDf7Y8K74xG+7m2cfUzv0dIX3c7HVFEo
+        3pW+Q2G3FjfNV3HXfgcR0tcwvfRl3Ki4DqfJC51Bj4f1P+KCpRCpoo9xpOIQvPTJklO2di2g8ImAB9UP
+        EBw2AOGJUzH/s2jc192Hz96M5cKFCDjG4RXhWByrPAy3w40D4t0YlzsUfY9zSMldj3odOaZWD6OmnmCG
+        TmeEQlVHucCG5OSUbgQUFvICTGYTrt+7hiviclytvgwjjW12K2YfnAouhvwifQTyKrLha/Bhc8l6vPnZ
+        RHDxHJYeXQCD3gS1WofHCglqlLWQKRRQKFSoN1sgSE7uWkBBQQEvwOtp4Je8hTaxBpcPdpuDTygLD8zA
+        7LWROFl8AqWVl5Aq3Iybj26Ae48DF8Zh3fEkWPR23JHcwZrTK5GwKx6RH87AxZsX4bC7IBB0I+Ds2TYB
+        /5BXIOeHb1D2qBSVP93lnc9tbsRXl/dj+MbeGLVhCEamB6NPMoerj8rw4sYxCFzFIf9GDuwGF/LFeZgp
+        CMfr8yaDC+VQfOU8CXBji0DQtQChUMgLyBGfxpS8l/GH/RGIPbUY+69/his/X4aiToWkwgXovYtD/7/1
+        wG9LgvB60XhM/Go4NgpXQilX8yuQUrYJ4UlvY9i0wQiZORQPq6soHVuwZUs3AvLzhaKWplbUGdUYmzsc
+        Mbcikf5DMhadmYeoYzORcl4ApbIO+ysykFAZjT9LYhB/KwpfUC6QSZUwqa24rbyNGbun4dVo8otxHJZn
+        JsGgM0FvMHW/Ann5+SK2pzc6mrDiXAK43Ryivv0dNny/CvPLZ6FIXgCPwUfebYFULsMj6c+QyeTQq0ww
+        1VlwX3kfS4WLMfH9lzAgLBC9Z/RCWUU5iVbzTri1uzyQm5cn8ngb+GxXfKsI3HwO/rEUdskvIvJAOBZ+
+        F4XC2nyo6tQw1plhUlmgV5ogkytQIi1GXOkCTEgZg+B1fcF9xGGtcBV0KiPkFAUsFXe7G+bm5olYJWOk
+        3atOrcGEmBcxan4IBr73GwyKDsSkw+Mx69Zb2FSzCl8q9uOU8gSOKQ4hTboJMZWzEJo9DMP+HoCgXA5z
+        y2dCQqukVmmh1empXGumkqybiuhMbq6IFRLsBaOhHhduXsAlCrePL67D83uD0P+4H966MQGLpVFINL6P
+        FeYl+JMxBjGymZh2dyImV4zFGz+EYu3DRFTLa6BTG6DTG2Cm5Wet26I0J+eMyG53Qq3R8ivARJj0Fhpr
+        UCDJw/J7cYj88W3MUYRhieldxNlmI84ejQ8sUYg1ReMj/XJk0YakVKiJ3AiDgbZsyh92h5OmB9uMzrRz
+        taPTIDsnR2S12XnyOvrOKkqhSqUKKvJ85mi1Sjkuq8rwtf44Dlv34ZBrD4669uMb20mUa0tRLa2BVm6A
+        RqODwWSClaoiO9WFDKx9uHr14XaudnQaZGfniCyUs5mTKYlcQeRyhZLSqRJSmYIPNVWtBkqJBjKJErUS
+        OaQ1dL9aBUUNE1tHW68Opvp6KkTtbeRUETOwynru3LmbO/IxdBpkZWeLWLgoaKKn5OThUqkCtVI5JLUy
+        1NRKUSNhqMXjGsJjCWrpPiPX6Qx8wrFR6maktidg1ZDZYsHIkSMjOvIxdBpkZWWLTCYzHzYyeZvVPLG0
+        nbi2DTUSnpgnp+dsxfT0vVn1y5fhzGqy3kshzRo7rNCZoIjjuB7tXO3gf/z9/f3ood/ZgoLbHioejSTC
+        YKzns5dOb+Qt0zLQNqvhoePHRqp2bUTEcger+9nhgy7+b3Y2EIurnAcPHvouLCwsqUePHoN79erlT30n
+        Eaz5DR48OIQwJTExMevTnTsrt6Vn3CFUUh1/j/AgbVv6jwQxJRJxWlob0jMyqnbs2FG1a9cuMR06xfv2
+        7eNBsX5/zZo11yIjI7NGjx6d2rdv38VBQUFRISEhs0aMGDEtODh4DBn8VAT/89xzz/Xu16/fgJ49e/Yn
+        QawfRGqHEIaS4OH0wgjqR3aG/yi6zzCSwc/Prx3sf4cGBAQMGTBgwLCBAweG0NzDAwMDgwkD+/TpE8CM
+        bhMA7p8JRsEkNMH+FwAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
