--- a/Thuong-QuanLyNhanSu/Thuong-QuanLyNhanSu/Properties/Resources.resx
+++ b/Thuong-QuanLyNhanSu/Thuong-QuanLyNhanSu/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="background41" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\background41.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="BaoHiemXaHoi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BaoHiemXaHoi.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="duan" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\duan.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -165,5 +168,8 @@
   </data>
   <data name="hoacuc" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hoacuc.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="hoacuc1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hoacuc1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
