Thuong commit icon

--- a/Thuong-QuanLyNhanSu/Thuong-QuanLyNhanSu/Properties/Resources.resx
+++ b/Thuong-QuanLyNhanSu/Thuong-QuanLyNhanSu/Properties/Resources.resx
@@ -124,6 +124,12 @@
   <data name="anh3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\anh3.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="cancel_f2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cancel_f2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\anh2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="nhanvien" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\nhanvien.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -148,6 +154,9 @@
   <data name="hinh-nen-3d-dep-cho-dien-thoai-13" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hinh-nen-3d-dep-cho-dien-thoai-13.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="delete_f2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\delete_f2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="duan" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\duan.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -157,23 +166,35 @@
   <data name="phongban" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\phongban.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="quay-lai" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\quay-lai.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="add_48_hot" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\add_48_hot.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="addusers" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\addusers.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="hinh-nen-3d-dep-cho-dien-thoai-131" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hinh-nen-3d-dep-cho-dien-thoai-131.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="editadd_48_hot" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\editadd_48_hot.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="zoom_48_hot" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\zoom_48_hot.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="11" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\1.-bóng-trăng1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="anh2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\anh2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="delete" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\delete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="IMG_1755" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\IMG_1755.JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="save_48_hot" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\save_48_hot.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="quay-lai" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\quay-lai.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="hoacuc3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hoacuc3.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="delete" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\delete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Baohiemyte" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Baohiemyte.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -187,6 +208,9 @@
   <data name="duann" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\duann.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="IMG_1755" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\IMG_1755.JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="background41" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\background41.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -199,7 +223,7 @@
   <data name="top_6_hinh_anh_nha_xuong_dep_khong_the_bo_qua_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\top-6-hinh-anh-nha-xuong-dep-khong-the-bo-qua-2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="hinh-nen-3d-dep-cho-dien-thoai-131" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\hinh-nen-3d-dep-cho-dien-thoai-131.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="refresh_48_hot" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\refresh_48_hot.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
